Updated apps to StorytellerSDK 3.0.0.

--- a/Carthage-Sample/StorytellerSampleApp/Base.lproj/Main.storyboard
+++ b/Carthage-Sample/StorytellerSampleApp/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,8 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XgV-K8-Ym6">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XgV-K8-Ym6">
+                                <rect key="frame" x="0.0" y="20" width="414" height="876"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t9E-wV-Dxi" customClass="StorytellerRowView" customModule="StorytellerSDK">
                                         <rect key="frame" x="20" y="0.0" width="374" height="140"/>
@@ -28,13 +28,12 @@
                                     </view>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="t9E-wV-Dxi" secondAttribute="bottom" constant="712" id="34y-Vp-DJz"/>
                                     <constraint firstItem="t9E-wV-Dxi" firstAttribute="leading" secondItem="XgV-K8-Ym6" secondAttribute="leading" constant="20" symbolic="YES" id="OVT-1s-C2o"/>
                                     <constraint firstAttribute="trailing" secondItem="t9E-wV-Dxi" secondAttribute="trailing" constant="20" symbolic="YES" id="kZS-SP-BRC"/>
                                     <constraint firstItem="t9E-wV-Dxi" firstAttribute="centerX" secondItem="XgV-K8-Ym6" secondAttribute="centerX" id="kbm-aC-AQM"/>
-                                    <constraint firstItem="t9E-wV-Dxi" firstAttribute="top" secondItem="lBq-LC-piO" secondAttribute="top" id="mnD-VU-MdV"/>
+                                    <constraint firstItem="t9E-wV-Dxi" firstAttribute="top" secondItem="XgV-K8-Ym6" secondAttribute="top" id="mnD-VU-MdV"/>
                                 </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="lBq-LC-piO"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="sYA-kW-mc2"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
