--- a/XCFrameworks-Sample/StorytellerSampleApp/Base.lproj/Main.storyboard
+++ b/XCFrameworks-Sample/StorytellerSampleApp/Base.lproj/Main.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,34 +17,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XgV-K8-Ym6">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XgV-K8-Ym6">
                                 <rect key="frame" x="0.0" y="20" width="414" height="876"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t9E-wV-Dxi" customClass="StorytellerRowView" customModule="StorytellerSDK">
-                                        <rect key="frame" x="20" y="0.0" width="374" height="140"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="210"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="140" id="LJA-rk-8Mp"/>
+                                            <constraint firstAttribute="height" constant="210" id="FYY-nE-VZ9"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="t9E-wV-Dxi" firstAttribute="leading" secondItem="XgV-K8-Ym6" secondAttribute="leading" constant="20" symbolic="YES" id="OVT-1s-C2o"/>
-                                    <constraint firstAttribute="bottom" secondItem="t9E-wV-Dxi" secondAttribute="bottom" constant="712" id="ZOb-TG-zgz"/>
-                                    <constraint firstAttribute="trailing" secondItem="t9E-wV-Dxi" secondAttribute="trailing" constant="20" symbolic="YES" id="kZS-SP-BRC"/>
-                                    <constraint firstItem="t9E-wV-Dxi" firstAttribute="centerX" secondItem="XgV-K8-Ym6" secondAttribute="centerX" id="kbm-aC-AQM"/>
+                                    <constraint firstAttribute="bottom" secondItem="t9E-wV-Dxi" secondAttribute="bottom" id="D5r-dE-hEK"/>
+                                    <constraint firstItem="t9E-wV-Dxi" firstAttribute="leading" secondItem="XgV-K8-Ym6" secondAttribute="leading" id="OVT-1s-C2o"/>
+                                    <constraint firstAttribute="trailing" secondItem="t9E-wV-Dxi" secondAttribute="trailing" id="cNU-oq-cpr"/>
                                     <constraint firstItem="t9E-wV-Dxi" firstAttribute="top" secondItem="XgV-K8-Ym6" secondAttribute="top" id="mnD-VU-MdV"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="XgV-K8-Ym6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5uj-50-ZTc"/>
-                            <constraint firstItem="XgV-K8-Ym6" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="F2K-y2-Ovg"/>
+                            <constraint firstItem="XgV-K8-Ym6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="5uj-50-ZTc"/>
+                            <constraint firstItem="t9E-wV-Dxi" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="8R9-rN-oDB"/>
+                            <constraint firstItem="XgV-K8-Ym6" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="F2K-y2-Ovg"/>
                             <constraint firstAttribute="bottom" secondItem="XgV-K8-Ym6" secondAttribute="bottom" id="PCj-cP-Pgg"/>
                             <constraint firstItem="XgV-K8-Ym6" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" symbolic="YES" id="bzP-b4-PaE"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="scrollView" destination="XgV-K8-Ym6" id="tH7-LS-bpz"/>
@@ -55,4 +56,9 @@
             <point key="canvasLocation" x="131.8840579710145" y="85.714285714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
