update to Storyteller SDK 6.0.0

--- a/Shared/Base.lproj/Main.storyboard
+++ b/Shared/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,18 +17,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XgV-K8-Ym6">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" directionalLockEnabled="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XgV-K8-Ym6">
                                 <rect key="frame" x="0.0" y="20" width="414" height="876"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t9E-wV-Dxi" customClass="StorytellerRowView" customModule="StorytellerSDK">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="210"/>
+                                        <rect key="frame" x="0.0" y="88" width="414" height="210"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="210" id="FYY-nE-VZ9"/>
                                         </constraints>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rWq-dD-CGc">
-                                        <rect key="frame" x="163.5" y="218" width="87" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rWq-dD-CGc">
+                                        <rect key="frame" x="163.5" y="630" width="87" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="Vwu-5c-lTC"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="87" id="qiu-JD-qRg"/>
@@ -38,14 +38,40 @@
                                             <action selector="changeUserTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="5YF-hX-gOe"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Storyteller Row View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pCA-hM-SYY">
+                                        <rect key="frame" x="8" y="56" width="398" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Storyteller Grid View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1SH-6c-30j">
+                                        <rect key="frame" x="8" y="326" width="398" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cvx-sN-CN2" customClass="StorytellerGridView" customModule="StorytellerSDK">
+                                        <rect key="frame" x="0.0" y="378" width="414" height="210"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="rWq-dD-CGc" firstAttribute="centerX" secondItem="XgV-K8-Ym6" secondAttribute="centerX" id="1z4-d5-Lrh"/>
-                                    <constraint firstAttribute="bottom" secondItem="t9E-wV-Dxi" secondAttribute="bottom" id="D5r-dE-hEK"/>
+                                    <constraint firstItem="cvx-sN-CN2" firstAttribute="top" secondItem="1SH-6c-30j" secondAttribute="bottom" constant="31.5" id="9Mi-Da-zHP"/>
+                                    <constraint firstItem="pCA-hM-SYY" firstAttribute="leading" secondItem="XgV-K8-Ym6" secondAttribute="leading" constant="8" id="C5x-vs-Ko1"/>
+                                    <constraint firstItem="rWq-dD-CGc" firstAttribute="top" secondItem="cvx-sN-CN2" secondAttribute="bottom" constant="42" id="FEo-kX-92T"/>
+                                    <constraint firstItem="1SH-6c-30j" firstAttribute="leading" secondItem="XgV-K8-Ym6" secondAttribute="leading" constant="8" id="HF0-h7-wvo"/>
+                                    <constraint firstItem="pCA-hM-SYY" firstAttribute="top" secondItem="XgV-K8-Ym6" secondAttribute="top" constant="56" id="OKC-KV-gRX"/>
                                     <constraint firstItem="t9E-wV-Dxi" firstAttribute="leading" secondItem="XgV-K8-Ym6" secondAttribute="leading" id="OVT-1s-C2o"/>
+                                    <constraint firstAttribute="trailing" secondItem="1SH-6c-30j" secondAttribute="trailing" constant="8" id="V7k-Fj-L1J"/>
+                                    <constraint firstAttribute="bottom" secondItem="rWq-dD-CGc" secondAttribute="bottom" constant="224" id="Xyw-Zp-PBC"/>
+                                    <constraint firstAttribute="trailing" secondItem="pCA-hM-SYY" secondAttribute="trailing" constant="8" id="aSE-AN-uT3"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="rWq-dD-CGc" secondAttribute="bottom" constant="44" id="aej-oK-NIL"/>
                                     <constraint firstAttribute="trailing" secondItem="t9E-wV-Dxi" secondAttribute="trailing" id="cNU-oq-cpr"/>
-                                    <constraint firstItem="t9E-wV-Dxi" firstAttribute="top" secondItem="XgV-K8-Ym6" secondAttribute="top" id="mnD-VU-MdV"/>
-                                    <constraint firstItem="rWq-dD-CGc" firstAttribute="top" secondItem="t9E-wV-Dxi" secondAttribute="bottom" constant="8" symbolic="YES" id="qQy-He-b3H"/>
+                                    <constraint firstItem="1SH-6c-30j" firstAttribute="top" secondItem="t9E-wV-Dxi" secondAttribute="bottom" constant="28" id="eFX-cI-J0P"/>
+                                    <constraint firstItem="cvx-sN-CN2" firstAttribute="leading" secondItem="XgV-K8-Ym6" secondAttribute="leading" id="iPE-7z-UUV"/>
+                                    <constraint firstAttribute="trailing" secondItem="cvx-sN-CN2" secondAttribute="trailing" id="m6E-c7-kFO"/>
+                                    <constraint firstItem="t9E-wV-Dxi" firstAttribute="top" secondItem="pCA-hM-SYY" secondAttribute="bottom" constant="11.5" id="qXe-Pv-Ghn"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
@@ -61,6 +87,7 @@
                     </view>
                     <connections>
                         <outlet property="scrollView" destination="XgV-K8-Ym6" id="tH7-LS-bpz"/>
+                        <outlet property="storytellerGridView" destination="cvx-sN-CN2" id="NME-1f-Pnu"/>
                         <outlet property="storytellerRowView" destination="t9E-wV-Dxi" id="O76-8I-87W"/>
                         <segue destination="G7K-b8-yEe" kind="presentation" identifier="showDeeplinkPreview" id="gW7-Lk-CD4"/>
                     </connections>
