--- a/Shared/StoryboardExample/Base.lproj/StoryboardExample.storyboard
+++ b/Shared/StoryboardExample/Base.lproj/StoryboardExample.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Multiple Lists View Controller-->
+        <!--Storyboard View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="MultipleListsViewController" id="BYZ-38-t0r" customClass="MultipleListsViewController" customModule="StorytellerSampleApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StoryboardViewController" id="BYZ-38-t0r" customClass="StoryboardViewController" customModule="StorytellerSampleApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="1400"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
